parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> PROGRAM ID SEMICOLON variable_block functions main_body
Rule 2     functions -> FUNCTION ID LPAREN function_variables RPAREN COLON INTEGER SEMICOLON variable_block main_body functions
Rule 3     functions -> FUNCTION ID LPAREN function_variables RPAREN COLON REAL SEMICOLON variable_block main_body functions
Rule 4     functions -> FUNCTION ID LPAREN function_variables RPAREN COLON BOOLEAN SEMICOLON variable_block main_body functions
Rule 5     functions -> FUNCTION ID LPAREN function_variables RPAREN COLON STRING SEMICOLON variable_block main_body functions
Rule 6     functions -> FUNCTION ID LPAREN function_variables RPAREN COLON CHARACTER SEMICOLON variable_block main_body functions
Rule 7     functions -> PROCEDURE ID SEMICOLON variable_block main_body functions
Rule 8     functions -> empty
Rule 9     function_variables -> ID COLON INTEGER
Rule 10    function_variables -> ID COLON REAL
Rule 11    function_variables -> ID COLON BOOLEAN
Rule 12    function_variables -> ID COLON STRING
Rule 13    function_variables -> ID COLON CHARACTER
Rule 14    function_variables -> ID COLON INTEGER COMMA function_variables
Rule 15    function_variables -> ID COLON REAL COMMA function_variables
Rule 16    function_variables -> ID COLON BOOLEAN COMMA function_variables
Rule 17    function_variables -> ID COLON STRING COMMA function_variables
Rule 18    function_variables -> ID COLON CHARACTER COMMA function_variables
Rule 19    function_variables -> ID COLON INTEGER SEMICOLON function_variables
Rule 20    function_variables -> ID COLON REAL SEMICOLON function_variables
Rule 21    function_variables -> ID COLON BOOLEAN SEMICOLON function_variables
Rule 22    function_variables -> ID COLON STRING SEMICOLON function_variables
Rule 23    function_variables -> ID COLON CHARACTER SEMICOLON function_variables
Rule 24    function_variables -> empty
Rule 25    main_body -> BEGIN body END
Rule 26    write -> WRITE LPAREN STR RPAREN SEMICOLON
Rule 27    write -> WRITE LPAREN expression RPAREN SEMICOLON
Rule 28    body -> while_loop body
Rule 29    body -> for_loop body
Rule 30    body -> repeat_loop body
Rule 31    body -> if_statement body
Rule 32    body -> expression body
Rule 33    body -> var_assign body
Rule 34    body -> write body
Rule 35    body -> empty
Rule 36    while_loop -> WHILE boolean_expression DO main_body
Rule 37    for_loop -> FOR ID ASSIGN INT DOWNTO INT DO main_body
Rule 38    for_loop -> FOR ID ASSIGN INT TO INT DO main_body
Rule 39    repeat_loop -> REPEAT body UNTIL boolean_expression SEMICOLON
Rule 40    if_statement -> IF boolean_expression THEN main_body
Rule 41    if_statement -> IF boolean_expression THEN main_body ELSE main_body
Rule 42    numeric -> INT
Rule 43    numeric -> RE
Rule 44    numeric -> ID
Rule 45    boolean_expression -> expression LESSER expression
Rule 46    boolean_expression -> expression LESSER_EQUAL expression
Rule 47    boolean_expression -> expression EQUAL expression
Rule 48    boolean_expression -> expression GREATER_EQUAL expression
Rule 49    boolean_expression -> expression GREATER expression
Rule 50    boolean_expression -> NOT boolean_expression
Rule 51    boolean_expression -> boolean_expression and_or boolean_expression
Rule 52    boolean_expression -> LPAREN boolean_expression RPAREN
Rule 53    boolean_expression -> BOOL
Rule 54    and_or -> AND
Rule 55    and_or -> OR
Rule 56    var_assign -> ID ASSIGN STR SEMICOLON
Rule 57    var_assign -> ID ASSIGN CHAR SEMICOLON
Rule 58    var_assign -> ID ASSIGN BOOL SEMICOLON
Rule 59    var_assign -> ID ASSIGN expression SEMICOLON
Rule 60    var_assign -> ID SEMICOLON
Rule 61    function_call -> ID LPAREN vars RPAREN
Rule 62    vars -> STR COMMA vars
Rule 63    vars -> BOOL COMMA vars
Rule 64    vars -> CHAR COMMA vars
Rule 65    vars -> expression COMMA vars
Rule 66    vars -> expression
Rule 67    vars -> STR
Rule 68    vars -> BOOL
Rule 69    vars -> CHAR
Rule 70    expression -> expression PLUS expression
Rule 71    expression -> expression MINUS expression
Rule 72    expression -> expression TIMES expression
Rule 73    expression -> expression DIVIDE expression
Rule 74    expression -> expression MOD expression
Rule 75    expression -> LPAREN expression RPAREN
Rule 76    expression -> numeric
Rule 77    expression -> function_call
Rule 78    variable_block -> empty
Rule 79    variable_block -> VAR variables
Rule 80    variables -> variable_describe
Rule 81    variables -> variable_describe variables
Rule 82    variable_describe -> ID COLON STRING SEMICOLON
Rule 83    variable_describe -> ID COLON INTEGER SEMICOLON
Rule 84    variable_describe -> ID COLON CHARACTER SEMICOLON
Rule 85    variable_describe -> ID COLON BOOLEAN SEMICOLON
Rule 86    variable_describe -> ID COLON REAL SEMICOLON
Rule 87    empty -> <empty>

Terminals, with rules where they appear

AND                  : 54
ASSIGN               : 37 38 56 57 58 59
BEGIN                : 25
BOOL                 : 53 58 63 68
BOOLEAN              : 4 11 16 21 85
CHAR                 : 57 64 69
CHARACTER            : 6 13 18 23 84
COLON                : 2 3 4 5 6 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 82 83 84 85 86
COMMA                : 14 15 16 17 18 62 63 64 65
DIVIDE               : 73
DO                   : 36 37 38
DOWNTO               : 37
ELSE                 : 41
END                  : 25
EQUAL                : 47
FOR                  : 37 38
FUNCTION             : 2 3 4 5 6
GREATER              : 49
GREATER_EQUAL        : 48
ID                   : 1 2 3 4 5 6 7 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 37 38 44 56 57 58 59 60 61 82 83 84 85 86
IF                   : 40 41
INT                  : 37 37 38 38 42
INTEGER              : 2 9 14 19 83
LESSER               : 45
LESSER_EQUAL         : 46
LPAREN               : 2 3 4 5 6 26 27 52 61 75
MINUS                : 71
MOD                  : 74
NOT                  : 50
OR                   : 55
PLUS                 : 70
PROCEDURE            : 7
PROGRAM              : 1
RE                   : 43
REAL                 : 3 10 15 20 86
REPEAT               : 39
RPAREN               : 2 3 4 5 6 26 27 52 61 75
SEMICOLON            : 1 2 3 4 5 6 7 19 20 21 22 23 26 27 39 56 57 58 59 60 82 83 84 85 86
STR                  : 26 56 62 67
STRING               : 5 12 17 22 82
THEN                 : 40 41
TIMES                : 72
TO                   : 38
UNTIL                : 39
VAR                  : 79
WHILE                : 36
WRITE                : 26 27
error                : 

Nonterminals, with rules where they appear

and_or               : 51
body                 : 25 28 29 30 31 32 33 34 39
boolean_expression   : 36 39 40 41 50 51 51 52
empty                : 8 24 35 78
expression           : 27 32 45 45 46 46 47 47 48 48 49 49 59 65 66 70 70 71 71 72 72 73 73 74 74 75
for_loop             : 29
function_call        : 77
function_variables   : 2 3 4 5 6 14 15 16 17 18 19 20 21 22 23
functions            : 1 2 3 4 5 6 7
if_statement         : 31
main_body            : 1 2 3 4 5 6 7 36 37 38 40 41 41
numeric              : 76
repeat_loop          : 30
start                : 0
var_assign           : 33
variable_block       : 1 2 3 4 5 6 7
variable_describe    : 80 81
variables            : 79 81
vars                 : 61 62 63 64 65
while_loop           : 28
write                : 34

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . PROGRAM ID SEMICOLON variable_block functions main_body

    PROGRAM         shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> PROGRAM . ID SEMICOLON variable_block functions main_body

    ID              shift and go to state 3


state 3

    (1) start -> PROGRAM ID . SEMICOLON variable_block functions main_body

    SEMICOLON       shift and go to state 4


state 4

    (1) start -> PROGRAM ID SEMICOLON . variable_block functions main_body
    (78) variable_block -> . empty
    (79) variable_block -> . VAR variables
    (87) empty -> .

    VAR             shift and go to state 7
    FUNCTION        reduce using rule 87 (empty -> .)
    PROCEDURE       reduce using rule 87 (empty -> .)
    BEGIN           reduce using rule 87 (empty -> .)

    variable_block                 shift and go to state 5
    empty                          shift and go to state 6

state 5

    (1) start -> PROGRAM ID SEMICOLON variable_block . functions main_body
    (2) functions -> . FUNCTION ID LPAREN function_variables RPAREN COLON INTEGER SEMICOLON variable_block main_body functions
    (3) functions -> . FUNCTION ID LPAREN function_variables RPAREN COLON REAL SEMICOLON variable_block main_body functions
    (4) functions -> . FUNCTION ID LPAREN function_variables RPAREN COLON BOOLEAN SEMICOLON variable_block main_body functions
    (5) functions -> . FUNCTION ID LPAREN function_variables RPAREN COLON STRING SEMICOLON variable_block main_body functions
    (6) functions -> . FUNCTION ID LPAREN function_variables RPAREN COLON CHARACTER SEMICOLON variable_block main_body functions
    (7) functions -> . PROCEDURE ID SEMICOLON variable_block main_body functions
    (8) functions -> . empty
    (87) empty -> .

    FUNCTION        shift and go to state 9
    PROCEDURE       shift and go to state 10
    BEGIN           reduce using rule 87 (empty -> .)

    functions                      shift and go to state 8
    empty                          shift and go to state 11

state 6

    (78) variable_block -> empty .

    FUNCTION        reduce using rule 78 (variable_block -> empty .)
    PROCEDURE       reduce using rule 78 (variable_block -> empty .)
    BEGIN           reduce using rule 78 (variable_block -> empty .)


state 7

    (79) variable_block -> VAR . variables
    (80) variables -> . variable_describe
    (81) variables -> . variable_describe variables
    (82) variable_describe -> . ID COLON STRING SEMICOLON
    (83) variable_describe -> . ID COLON INTEGER SEMICOLON
    (84) variable_describe -> . ID COLON CHARACTER SEMICOLON
    (85) variable_describe -> . ID COLON BOOLEAN SEMICOLON
    (86) variable_describe -> . ID COLON REAL SEMICOLON

    ID              shift and go to state 14

    variables                      shift and go to state 12
    variable_describe              shift and go to state 13

state 8

    (1) start -> PROGRAM ID SEMICOLON variable_block functions . main_body
    (25) main_body -> . BEGIN body END

    BEGIN           shift and go to state 16

    main_body                      shift and go to state 15

state 9

    (2) functions -> FUNCTION . ID LPAREN function_variables RPAREN COLON INTEGER SEMICOLON variable_block main_body functions
    (3) functions -> FUNCTION . ID LPAREN function_variables RPAREN COLON REAL SEMICOLON variable_block main_body functions
    (4) functions -> FUNCTION . ID LPAREN function_variables RPAREN COLON BOOLEAN SEMICOLON variable_block main_body functions
    (5) functions -> FUNCTION . ID LPAREN function_variables RPAREN COLON STRING SEMICOLON variable_block main_body functions
    (6) functions -> FUNCTION . ID LPAREN function_variables RPAREN COLON CHARACTER SEMICOLON variable_block main_body functions

    ID              shift and go to state 17


state 10

    (7) functions -> PROCEDURE . ID SEMICOLON variable_block main_body functions

    ID              shift and go to state 18


state 11

    (8) functions -> empty .

    BEGIN           reduce using rule 8 (functions -> empty .)


state 12

    (79) variable_block -> VAR variables .

    FUNCTION        reduce using rule 79 (variable_block -> VAR variables .)
    PROCEDURE       reduce using rule 79 (variable_block -> VAR variables .)
    BEGIN           reduce using rule 79 (variable_block -> VAR variables .)


state 13

    (80) variables -> variable_describe .
    (81) variables -> variable_describe . variables
    (80) variables -> . variable_describe
    (81) variables -> . variable_describe variables
    (82) variable_describe -> . ID COLON STRING SEMICOLON
    (83) variable_describe -> . ID COLON INTEGER SEMICOLON
    (84) variable_describe -> . ID COLON CHARACTER SEMICOLON
    (85) variable_describe -> . ID COLON BOOLEAN SEMICOLON
    (86) variable_describe -> . ID COLON REAL SEMICOLON

    FUNCTION        reduce using rule 80 (variables -> variable_describe .)
    PROCEDURE       reduce using rule 80 (variables -> variable_describe .)
    BEGIN           reduce using rule 80 (variables -> variable_describe .)
    ID              shift and go to state 14

    variable_describe              shift and go to state 13
    variables                      shift and go to state 19

state 14

    (82) variable_describe -> ID . COLON STRING SEMICOLON
    (83) variable_describe -> ID . COLON INTEGER SEMICOLON
    (84) variable_describe -> ID . COLON CHARACTER SEMICOLON
    (85) variable_describe -> ID . COLON BOOLEAN SEMICOLON
    (86) variable_describe -> ID . COLON REAL SEMICOLON

    COLON           shift and go to state 20


state 15

    (1) start -> PROGRAM ID SEMICOLON variable_block functions main_body .

    $end            reduce using rule 1 (start -> PROGRAM ID SEMICOLON variable_block functions main_body .)


state 16

    (25) main_body -> BEGIN . body END
    (28) body -> . while_loop body
    (29) body -> . for_loop body
    (30) body -> . repeat_loop body
    (31) body -> . if_statement body
    (32) body -> . expression body
    (33) body -> . var_assign body
    (34) body -> . write body
    (35) body -> . empty
    (36) while_loop -> . WHILE boolean_expression DO main_body
    (37) for_loop -> . FOR ID ASSIGN INT DOWNTO INT DO main_body
    (38) for_loop -> . FOR ID ASSIGN INT TO INT DO main_body
    (39) repeat_loop -> . REPEAT body UNTIL boolean_expression SEMICOLON
    (40) if_statement -> . IF boolean_expression THEN main_body
    (41) if_statement -> . IF boolean_expression THEN main_body ELSE main_body
    (70) expression -> . expression PLUS expression
    (71) expression -> . expression MINUS expression
    (72) expression -> . expression TIMES expression
    (73) expression -> . expression DIVIDE expression
    (74) expression -> . expression MOD expression
    (75) expression -> . LPAREN expression RPAREN
    (76) expression -> . numeric
    (77) expression -> . function_call
    (56) var_assign -> . ID ASSIGN STR SEMICOLON
    (57) var_assign -> . ID ASSIGN CHAR SEMICOLON
    (58) var_assign -> . ID ASSIGN BOOL SEMICOLON
    (59) var_assign -> . ID ASSIGN expression SEMICOLON
    (60) var_assign -> . ID SEMICOLON
    (26) write -> . WRITE LPAREN STR RPAREN SEMICOLON
    (27) write -> . WRITE LPAREN expression RPAREN SEMICOLON
    (87) empty -> .
    (42) numeric -> . INT
    (43) numeric -> . RE
    (44) numeric -> . ID
    (61) function_call -> . ID LPAREN vars RPAREN

    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    REPEAT          shift and go to state 34
    IF              shift and go to state 35
    LPAREN          shift and go to state 36
    ID              shift and go to state 32
    WRITE           shift and go to state 39
    END             reduce using rule 87 (empty -> .)
    INT             shift and go to state 33
    RE              shift and go to state 40

    body                           shift and go to state 21
    while_loop                     shift and go to state 22
    for_loop                       shift and go to state 23
    repeat_loop                    shift and go to state 24
    if_statement                   shift and go to state 25
    expression                     shift and go to state 26
    var_assign                     shift and go to state 27
    write                          shift and go to state 28
    empty                          shift and go to state 29
    numeric                        shift and go to state 37
    function_call                  shift and go to state 38

state 17

    (2) functions -> FUNCTION ID . LPAREN function_variables RPAREN COLON INTEGER SEMICOLON variable_block main_body functions
    (3) functions -> FUNCTION ID . LPAREN function_variables RPAREN COLON REAL SEMICOLON variable_block main_body functions
    (4) functions -> FUNCTION ID . LPAREN function_variables RPAREN COLON BOOLEAN SEMICOLON variable_block main_body functions
    (5) functions -> FUNCTION ID . LPAREN function_variables RPAREN COLON STRING SEMICOLON variable_block main_body functions
    (6) functions -> FUNCTION ID . LPAREN function_variables RPAREN COLON CHARACTER SEMICOLON variable_block main_body functions

    LPAREN          shift and go to state 41


state 18

    (7) functions -> PROCEDURE ID . SEMICOLON variable_block main_body functions

    SEMICOLON       shift and go to state 42


state 19

    (81) variables -> variable_describe variables .

    FUNCTION        reduce using rule 81 (variables -> variable_describe variables .)
    PROCEDURE       reduce using rule 81 (variables -> variable_describe variables .)
    BEGIN           reduce using rule 81 (variables -> variable_describe variables .)


state 20

    (82) variable_describe -> ID COLON . STRING SEMICOLON
    (83) variable_describe -> ID COLON . INTEGER SEMICOLON
    (84) variable_describe -> ID COLON . CHARACTER SEMICOLON
    (85) variable_describe -> ID COLON . BOOLEAN SEMICOLON
    (86) variable_describe -> ID COLON . REAL SEMICOLON

    STRING          shift and go to state 43
    INTEGER         shift and go to state 44
    CHARACTER       shift and go to state 45
    BOOLEAN         shift and go to state 46
    REAL            shift and go to state 47


state 21

    (25) main_body -> BEGIN body . END

    END             shift and go to state 48


state 22

    (28) body -> while_loop . body
    (28) body -> . while_loop body
    (29) body -> . for_loop body
    (30) body -> . repeat_loop body
    (31) body -> . if_statement body
    (32) body -> . expression body
    (33) body -> . var_assign body
    (34) body -> . write body
    (35) body -> . empty
    (36) while_loop -> . WHILE boolean_expression DO main_body
    (37) for_loop -> . FOR ID ASSIGN INT DOWNTO INT DO main_body
    (38) for_loop -> . FOR ID ASSIGN INT TO INT DO main_body
    (39) repeat_loop -> . REPEAT body UNTIL boolean_expression SEMICOLON
    (40) if_statement -> . IF boolean_expression THEN main_body
    (41) if_statement -> . IF boolean_expression THEN main_body ELSE main_body
    (70) expression -> . expression PLUS expression
    (71) expression -> . expression MINUS expression
    (72) expression -> . expression TIMES expression
    (73) expression -> . expression DIVIDE expression
    (74) expression -> . expression MOD expression
    (75) expression -> . LPAREN expression RPAREN
    (76) expression -> . numeric
    (77) expression -> . function_call
    (56) var_assign -> . ID ASSIGN STR SEMICOLON
    (57) var_assign -> . ID ASSIGN CHAR SEMICOLON
    (58) var_assign -> . ID ASSIGN BOOL SEMICOLON
    (59) var_assign -> . ID ASSIGN expression SEMICOLON
    (60) var_assign -> . ID SEMICOLON
    (26) write -> . WRITE LPAREN STR RPAREN SEMICOLON
    (27) write -> . WRITE LPAREN expression RPAREN SEMICOLON
    (87) empty -> .
    (42) numeric -> . INT
    (43) numeric -> . RE
    (44) numeric -> . ID
    (61) function_call -> . ID LPAREN vars RPAREN

    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    REPEAT          shift and go to state 34
    IF              shift and go to state 35
    LPAREN          shift and go to state 36
    ID              shift and go to state 32
    WRITE           shift and go to state 39
    END             reduce using rule 87 (empty -> .)
    UNTIL           reduce using rule 87 (empty -> .)
    INT             shift and go to state 33
    RE              shift and go to state 40

    while_loop                     shift and go to state 22
    body                           shift and go to state 49
    for_loop                       shift and go to state 23
    repeat_loop                    shift and go to state 24
    if_statement                   shift and go to state 25
    expression                     shift and go to state 26
    var_assign                     shift and go to state 27
    write                          shift and go to state 28
    empty                          shift and go to state 29
    numeric                        shift and go to state 37
    function_call                  shift and go to state 38

state 23

    (29) body -> for_loop . body
    (28) body -> . while_loop body
    (29) body -> . for_loop body
    (30) body -> . repeat_loop body
    (31) body -> . if_statement body
    (32) body -> . expression body
    (33) body -> . var_assign body
    (34) body -> . write body
    (35) body -> . empty
    (36) while_loop -> . WHILE boolean_expression DO main_body
    (37) for_loop -> . FOR ID ASSIGN INT DOWNTO INT DO main_body
    (38) for_loop -> . FOR ID ASSIGN INT TO INT DO main_body
    (39) repeat_loop -> . REPEAT body UNTIL boolean_expression SEMICOLON
    (40) if_statement -> . IF boolean_expression THEN main_body
    (41) if_statement -> . IF boolean_expression THEN main_body ELSE main_body
    (70) expression -> . expression PLUS expression
    (71) expression -> . expression MINUS expression
    (72) expression -> . expression TIMES expression
    (73) expression -> . expression DIVIDE expression
    (74) expression -> . expression MOD expression
    (75) expression -> . LPAREN expression RPAREN
    (76) expression -> . numeric
    (77) expression -> . function_call
    (56) var_assign -> . ID ASSIGN STR SEMICOLON
    (57) var_assign -> . ID ASSIGN CHAR SEMICOLON
    (58) var_assign -> . ID ASSIGN BOOL SEMICOLON
    (59) var_assign -> . ID ASSIGN expression SEMICOLON
    (60) var_assign -> . ID SEMICOLON
    (26) write -> . WRITE LPAREN STR RPAREN SEMICOLON
    (27) write -> . WRITE LPAREN expression RPAREN SEMICOLON
    (87) empty -> .
    (42) numeric -> . INT
    (43) numeric -> . RE
    (44) numeric -> . ID
    (61) function_call -> . ID LPAREN vars RPAREN

    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    REPEAT          shift and go to state 34
    IF              shift and go to state 35
    LPAREN          shift and go to state 36
    ID              shift and go to state 32
    WRITE           shift and go to state 39
    END             reduce using rule 87 (empty -> .)
    UNTIL           reduce using rule 87 (empty -> .)
    INT             shift and go to state 33
    RE              shift and go to state 40

    for_loop                       shift and go to state 23
    body                           shift and go to state 50
    while_loop                     shift and go to state 22
    repeat_loop                    shift and go to state 24
    if_statement                   shift and go to state 25
    expression                     shift and go to state 26
    var_assign                     shift and go to state 27
    write                          shift and go to state 28
    empty                          shift and go to state 29
    numeric                        shift and go to state 37
    function_call                  shift and go to state 38

state 24
